--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Livre de recettes !</a>
+            <a class="navbar-brand" href="/">Livre de recettes</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,10 +23,38 @@
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Mes liste de courses</a></li>
                 </ul>
+            </ul>    
+                
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+                {% if app.user %}
+                
                 <li class="nav-item">
-                <a class="nav-link" href="/login">Connexion</a>
+                    <a class="nav-link" href="#">Mon compte</a>
                 </li>
-            </ul>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('app_logout')}}">Déconnexion</a>
+                </li>
+
+                {% else %}
+                    
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('app_login')}}">Connexion</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('app_register')}}">S'inscrire</a>
+                </li>
+
+                {% endif %}
+                
+                </ul>
+
+
+
+
+            
             </div>
         </div>
 </nav>           
