--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -11,8 +11,11 @@
                 <a class="nav-link active" aria-current="page" href="/">Accueil</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Ingredients</a>
+                <a class="nav-link" href="{{path('ingredient')}}">Ingredients</a>
                 </li>
+                {#<li class="nav-item">#}
+                {#<a class="nav-link" href="{{path('recipe')}}">Recettes</a>#}
+                {#</li>#}
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Ma maison
