Correction du bug /recipe/slug (ex lasagne)

--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{recipe.name}} !{% endblock %}
+{% block title %}Liste de recettes !{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,10 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ recipe.name }}! ✅</h1>
+    <h1>Les recettes ✅</h1>
 
-    This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ '/home/ubuntu/Documents/Projets/recipebook-php/src/Controller/RecipeController.php'|file_link(0) }}">src/Controller/RecipeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/ubuntu/Documents/Projets/recipebook-php/templates/recipe/index.html.twig'|file_link(0) }}">templates/recipe/index.html.twig</a></code></li>
+        {{dump()}}
     </ul>
 </div>
 {% endblock %}
