--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -13,9 +13,9 @@
                 <li class="nav-item">
                 <a class="nav-link" href="{{path('ingredient')}}">Ingredients</a>
                 </li>
-                {#<li class="nav-item">#}
-                {#<a class="nav-link" href="{{path('recipe')}}">Recettes</a>#}
-                {#</li>#}
+                <li class="nav-item">
+                <a class="nav-link" href="/recipe">Recettes</a>
+                </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Ma maison
@@ -24,7 +24,7 @@
                     <li><a class="dropdown-item" href="#">Mes recettes</a></li>
                     <li><a class="dropdown-item" href="#">Mes ingredients</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Mes liste de courses</a></li>
+                    <li><a class="dropdown-item" href="#">Mes listes de courses</a></li>
                 </ul>
             </ul>    
                 
